Added basic features

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <div>
       <h1>Snake Game</h1>
+      <button class="btn" id="start">Start / Restart</button>
+      <div class="grid"></div>
+      <h2>Score: <span id="score">0</span></h2>
     </div>
     <script src="./assets/js/app.js"></script>
   </body>
